# mabo

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE.md  README.md  bun.lockb  cliff.toml  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.toml  typos.toml
crates/mabo/: Cargo.toml  release.toml
crates/mabo-benches/: Cargo.toml
crates/mabo-benches/benches/: compiler.rs  parser.rs  varint.rs
crates/mabo-benches/src/: lib.rs  varint.rs
crates/mabo-build/: Cargo.toml
crates/mabo-build/src/: decode.rs  definition.rs  encode.rs  lib.rs  size.rs
crates/mabo-build/tests/: compiler.rs
crates/mabo-build/tests/inputs_extra/: alias.mabo  const.mabo  enum.mabo  struct.mabo
crates/mabo-build/tests/snapshots/: compiler__compile@alias_basic.mabo.snap  compiler__compile@attribute_multi.mabo.snap  compiler__compile@attribute_single.mabo.snap  compiler__compile@attribute_unit.mabo.snap  compiler__compile@attributes.mabo.snap  compiler__compile@attributes_min_ws.mabo.snap  compiler__compile@const_basic.mabo.snap  compiler__compile@const_string.mabo.snap  compiler__compile@enum_basic.mabo.snap  compiler__compile@enum_generics.mabo.snap  compiler__compile@enum_many_ws.mabo.snap  compiler__compile@enum_min_ws.mabo.snap  compiler__compile@import_basic.mabo.snap  compiler__compile@mixed.mabo.snap  compiler__compile@module_basic.mabo.snap  compiler__compile@optional_ids.mabo.snap  compiler__compile@schema_basic.mabo.snap  compiler__compile@struct_basic.mabo.snap  compiler__compile@struct_generics.mabo.snap  compiler__compile@struct_many_ws.mabo.snap  compiler__compile@struct_min_ws.mabo.snap  compiler__compile@struct_tuple.mabo.snap  compiler__compile@types_basic.mabo.snap  compiler__compile@types_generic.mabo.snap  compiler__compile@types_nested.mabo.snap  compiler__compile@types_non_zero.mabo.snap  compiler__compile@types_ref.mabo.snap  compiler__compile_extra@alias.mabo.snap  compiler__compile_extra@const.mabo.snap  compiler__compile_extra@enum.mabo.snap  compiler__compile_extra@import.mabo.snap  compiler__compile_extra@module.mabo.snap  compiler__compile_extra@struct.mabo.snap
crates/mabo-capi/: Cargo.toml  build.rs
crates/mabo-capi/src/: lib.rs
crates/mabo-cli/: Cargo.toml
crates/mabo-cli/examples/: markdown.rs
crates/mabo-cli/src/: cli.rs  main.rs
crates/mabo-compiler/: Cargo.toml
crates/mabo-compiler/src/: highlight.rs  lib.rs  simplify.rs
crates/mabo-compiler/src/resolve/: error.rs  mod.rs
crates/mabo-compiler/src/validate/: generics.rs  ids.rs  mod.rs  names.rs  tuples.rs
crates/mabo-compiler/tests/: compiler.rs
crates/mabo-compiler/tests/snapshots/: compiler__error_resolve@import_root.mabo.snap  compiler__error_resolve@import_sub.mabo.snap  compiler__error_resolve@import_sub_type.mabo.snap  compiler__error_resolve@local_gens_mismatch.mabo.snap  compiler__error_resolve@local_kind_mismatch.mabo.snap  compiler__error_resolve@local_root.mabo.snap  compiler__error_resolve@local_sub.mabo.snap  (+35 more)
crates/mabo-derive/: Cargo.toml
crates/mabo-derive/src/: attributes.rs  cause.rs  debug.rs  error.rs  lib.rs
crates/mabo-doc/: Cargo.toml  input.css  package.json  tailwind.config.js
crates/mabo-doc/examples/: render.rs
crates/mabo-doc/src/: lib.rs  templates.rs
crates/mabo-doc/templates/: base.html  index.html
crates/mabo-doc/tests/: render.rs
crates/mabo-go/: Cargo.toml
crates/mabo-go/src/: cli.rs  decode.rs  definition.rs  encode.rs  lib.rs  main.rs  size.rs
crates/mabo-go/tests/: render.rs
crates/mabo-kotlin/: Cargo.toml
crates/mabo-kotlin/src/: decode.rs  definition.rs  encode.rs  lib.rs  size.rs
crates/mabo-kotlin/tests/: inputs  render.rs
crates/mabo-lsp/: Cargo.toml
crates/mabo-lsp/src/: cli.rs  client.rs  config.rs  logging.rs  main.rs  state.rs
crates/mabo-meta/: Cargo.toml
crates/mabo-meta/src/: lib.rs
crates/mabo-parser/: Cargo.toml
crates/mabo-parser/src/: error.rs  ext.rs  highlight.rs  lib.rs  location.rs  parser.rs  punctuated.rs  token.rs
crates/mabo-parser/tests/: parser.rs
crates/mabo-playground/: Cargo.toml  Mabo.toml  build.rs  schemas
crates/mabo-playground/src/: evolution.mabo  lib.rs  other.mabo  sample.mabo
crates/mabo-project/: Cargo.toml
crates/mabo-project/src/: de.rs  lib.rs
crates/mabo-typescript/: Cargo.toml
crates/mabo-typescript/src/: decode.rs  definition.rs  encode.rs  lib.rs  size.rs
crates/mabo-typescript/tests/: render.rs
crates/mabo/src/: lib.rs  varint.rs
crates/stef-benches/: Cargo.toml
crates/stef-benches/benches/: compiler.rs  parser.rs  varint.rs
crates/stef-benches/src/: lib.rs  varint.rs
crates/stef-build/: Cargo.toml
crates/stef-build/src/: decode.rs  definition.rs  encode.rs  lib.rs  size.rs
crates/stef-build/tests/: compiler.rs  parser.rs
crates/stef-cli/: Cargo.toml
crates/stef-cli/src/: cli.rs  main.rs
crates/stef-compiler/: Cargo.toml
crates/stef-compiler/src/: generics.rs  highlight.rs  ids.rs  lib.rs  names.rs  resolve.rs  simplify.rs
crates/stef-compiler/tests/: compiler.rs
crates/stef-derive/: Cargo.toml
crates/stef-derive/src/: attributes.rs  cause.rs  debug.rs  error.rs  lib.rs
crates/stef-doc/: .gitignore  Cargo.toml  input.css  package.json
crates/stef-doc/examples/: render.rs
crates/stef-doc/src/: lib.rs  templates.rs
crates/stef-doc/templates/: base.html  index.html
crates/stef-doc/tests/: inputs  render.rs
crates/stef-go/: Cargo.toml
crates/stef-go/src/: cli.rs  decode.rs  definition.rs  encode.rs  lib.rs  size.rs
crates/stef-go/tests/: render.rs
crates/stef-lsp/: Cargo.toml
crates/stef-lsp/src/: client.rs  compile.rs  config.rs  document_symbols.rs  handlers.rs  logging.rs  main.rs  state.rs  utf16.rs
crates/stef-meta/: Cargo.toml
crates/stef-meta/src/: lib.rs
crates/stef-parser/: Cargo.toml
crates/stef-parser/src/: error.rs  highlight.rs  lib.rs  location.rs  parser.rs
crates/stef-parser/tests/: parser.rs
crates/stef-playground/: Cargo.toml  build.rs  schemas
crates/stef-playground/src/: evolution.stef  lib.rs  main.rs  sample.stef  second.stef
(+813 files in other folders)
