[package]
name = "mabo-benches"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "varint"
harness = false

[dependencies]
mabo-compiler = { path = "../mabo-compiler" }
mabo-parser = { path = "../mabo-parser" }
mimalloc.workspace = true

[dev-dependencies]
divan = "0.1.13"
indoc.workspace = true

[lints]
workspace = true
