[package]
name = "mabo-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
glob.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }
prettyplease = "0.2.16"
proc-macro2.workspace = true
quote.workspace = true
mabo-compiler = { path = "../mabo-compiler" }
mabo-parser = { path = "../mabo-parser" }
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
