[package]
name = "mabo-capi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
mabo-compiler = { path = "../mabo-compiler", features = ["json"] }
mabo-parser = { path = "../mabo-parser" }
mabo-project = { path = "../mabo-project" }
serde_json.workspace = true

[build-dependencies]
cbindgen = { version = "0.28.0", default-features = false }

[lints]
workspace = true
