[package]
name = "mabo-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "mabo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob.workspace = true
mabo-compiler = { path = "../mabo-compiler" }
mabo-doc = { path = "../mabo-doc" }
mabo-parser = { path = "../mabo-parser", features = ["simd"] }
mabo-project = { path = "../mabo-project" }
miette = { workspace = true, features = ["fancy-no-backtrace"] }
mimalloc.workspace = true

[lints]
workspace = true
