[package]
name = "mabo-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
owo-colors.workspace = true
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.194", features = ["derive"], optional = true }
serde_json = { version = "1.0.110", optional = true }
mabo-parser = { path = "../mabo-parser" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
debug = []
json = ["dep:schemars", "dep:serde", "dep:serde_json"]

[lints]
workspace = true
