[package]
name = "mabo-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
features = ["docsrs", "json"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anstream.workspace = true
anstyle.workspace = true
document-features = { workspace = true, optional = true }
mabo-parser = { path = "../mabo-parser" }
miette.workspace = true
rustc-hash.workspace = true
schemars = { version = "0.8.22", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
#! # Feature flags
debug = []
docsrs = ["dep:document-features"]
## The json feature enables serialization of the simplified data structures to JSON.
json = ["dep:schemars", "dep:serde", "dep:serde_json"]

[lints]
workspace = true
