[package]
name = "mabo-doc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
comrak = { version = "0.35.0", default-features = false }
mabo-compiler = { path = "../mabo-compiler" }
mabo-meta = { path = "../mabo-meta" }
rinja = { version = "0.3.5", default-features = false }

[dev-dependencies]
glob.workspace = true
insta.workspace = true
mabo-parser = { path = "../mabo-parser" }

[lints]
workspace = true
