[package]
name = "mabo-go"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
heck = "0.4.1"
miette = { workspace = true, features = ["fancy-no-backtrace"] }
mabo-compiler = { path = "../mabo-compiler" }
mabo-parser = { path = "../mabo-parser" }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
