[package]
name = "mabo-go"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
heck = "0.5.0"
mabo-compiler = { path = "../mabo-compiler" }
mabo-parser = { path = "../mabo-parser", features = ["simd"] }
mabo-project = { path = "../mabo-project" }
miette = { workspace = true, features = ["fancy-no-backtrace"] }
mimalloc.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
