[package]
name = "mabo-kotlin"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
heck = "0.4.1"
mabo-compiler = { path = "../mabo-compiler" }
mabo-parser = { path = "../mabo-parser" }
mabo-project = { path = "../mabo-project" }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
