[package]
name = "mabo-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories = "5.0.1"
line-index = "0.1.1"
log = { version = "0.4.21", features = ["kv_std", "release_max_level_info", "std"] }
lsp-server = "0.7.6"
lsp-types = { version = "0.95.0", features = ["proposed"] }
mabo-compiler = { path = "../mabo-compiler" }
mabo-meta = { path = "../mabo-meta" }
mabo-parser = { path = "../mabo-parser", features = ["simd"] }
mabo-project = { path = "../mabo-project" }
ouroboros = "0.18.3"
parking_lot = "0.12.1"
ropey = "1.6.1"
rustc-hash.workspace = true
serde_json.workspace = true
serde.workspace = true
time = { version = "0.3.34", features = ["formatting", "local-offset", "macros"] }

[lints]
workspace = true
