[package]
name = "mabo-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories = "5.0.1"
line-index = "0.1.2"
log = { version = "0.4.22", features = ["kv_std", "release_max_level_info", "std"] }
lsp-server = "0.7.7"
lsp-types = { version = "0.97.0", features = ["proposed"] }
mabo-compiler = { path = "../mabo-compiler" }
mabo-meta = { path = "../mabo-meta" }
mabo-parser = { path = "../mabo-parser", features = ["simd"] }
mabo-project = { path = "../mabo-project" }
ouroboros = "0.18.4"
parking_lot = "0.12.3"
rand = "0.8.5"
ropey = "1.6.1"
rustc-hash.workspace = true
serde_json.workspace = true
serde.workspace = true
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }

[lints]
workspace = true
