[package]
name = "mabo-meta"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mabo-compiler = { path = "../mabo-compiler" }

[lints]
workspace = true
