[package]
name = "mabo-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
anstream.workspace = true
anstyle.workspace = true
mabo-derive = { path = "../mabo-derive" }
miette = { workspace = true, features = ["derive"] }
winnow = "0.6.0"

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
debug = []
simd = ["winnow/simd"]

[lints]
workspace = true
