[package]
name = "mabo-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
features = ["docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anstream.workspace = true
anstyle.workspace = true
document-features = { workspace = true, optional = true }
mabo-derive = { path = "../mabo-derive" }
miette = { workspace = true, features = ["derive"] }
winnow = "0.7.10"

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
#! # Feature flags
## TODO!
debug = []
docsrs = ["dep:document-features"]
## The simd feature enables SIMD accelerated parsing for better performance at the cost of platform
## support.
simd = ["winnow/simd"]

[lints]
workspace = true
