[package]
name = "mabo-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
globset = "0.4.16"
ignore = "0.4.23"
serde.workspace = true
spdx = "0.13.3"
thiserror.workspace = true
toml = "0.9.11"

[lints]
workspace = true
