[package]
name = "mabo-project"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
globset = "0.4.18"
ignore = "0.4.25"
serde.workspace = true
spdx = "0.13.4"
thiserror.workspace = true
toml = "1.1.2"

[lints]
workspace = true
