[package]
name = "mabo-typescript"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
heck = "0.5.0"
mabo-compiler = { path = "../mabo-compiler" }
mabo-parser = { path = "../mabo-parser" }
mabo-project = { path = "../mabo-project" }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
