[package]
name = "mabo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.10.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
paste = "1.0.15"
thiserror.workspace = true

[lints]
workspace = true
