[package]
name = "mabo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.5.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
paste = "1.0.14"
thiserror.workspace = true

[lints]
workspace = true
