[package]
name = "mabo"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.6.0"
paste = "1.0.15"
thiserror.workspace = true

[lints]
workspace = true
