[package]
name = "stef-benches"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "varint"
harness = false

[dependencies]
mimalloc.workspace = true
stef-compiler = { path = "../stef-compiler" }
stef-parser = { path = "../stef-parser" }

[dev-dependencies]
divan = "0.1.2"
indoc.workspace = true
