[package]
name = "stef-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
prettyplease = "0.2.15"
proc-macro2 = { version = "1.0.67", default-features = false }
quote = { version = "1.0.33", default-features = false }
stef-parser = { path = "../stef-parser" }
syn = "2.0.37"
thiserror = "1.0.49"

[dev-dependencies]
indoc = "2.0.4"
insta = { version = "1.33.0", features = ["glob"] }
pretty_assertions = "1.4.0"
stef = { path = "../stef" }
