[package]
name = "stef-build"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
glob.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }
prettyplease = "0.2.15"
proc-macro2.workspace = true
quote.workspace = true
stef-compiler = { path = "../stef-compiler" }
stef-parser = { path = "../stef-parser" }
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
