[package]
name = "stef-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "stef"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive", "wrap_help"] }
color-eyre.workspace = true
glob.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }
mimalloc.workspace = true
stef-parser = { path = "../stef-parser" }

[lints]
workspace = true
