[package]
name = "stef-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
include = ["src/**/*"]

[dependencies]
stef-parser = { path = "../stef-parser" }
