[package]
name = "stef-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
stef-parser = { path = "../stef-parser" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }
