[package]
name = "stef-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette.workspace = true
owo-colors.workspace = true
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
stef-parser = { path = "../stef-parser" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
debug = []
json = ["dep:schemars", "dep:serde", "dep:serde_json"]

[lints]
workspace = true
