[package]
name = "stef-doc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", default-features = false, features = ["markdown"] }
heck = "0.4.1"
stef-meta = { path = "../stef-meta" }
stef-parser = { path = "../stef-parser" }

[dev-dependencies]
glob.workspace = true
insta.workspace = true

[lints]
workspace = true
