[package]
name = "stef-doc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
askama = { version = "0.12.1", default-features = false, features = ["markdown"] }
heck = "0.4.1"
stef-compiler = { path = "../stef-compiler" }
stef-meta = { path = "../stef-meta" }

[dev-dependencies]
glob.workspace = true
insta.workspace = true
stef-parser = { path = "../stef-parser" }

[lints]
workspace = true
