[package]
name = "stef-go"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
heck = "0.4.1"
miette = { workspace = true, features = ["fancy-no-backtrace"] }
stef-compiler = { path = "../stef-compiler" }
stef-parser = { path = "../stef-parser" }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
