[package]
name = "stef-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
clap.workspace = true
directories = "5.0.1"
ouroboros = "0.18.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stef-compiler = { path = "../stef-compiler" }
stef-parser = { path = "../stef-parser" }
time = { version = "0.3.30", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.34.0", features = ["fs", "io-std", "io-util", "rt-multi-thread"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time"] }

[lints]
workspace = true
