[package]
name = "stef-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
clap.workspace = true
directories = "5.0.1"
line-index = "0.1.0"
log = { version = "0.4.20", features = ["kv_unstable_std", "std"] }
lsp-server = "0.7.5"
lsp-types = { version = "0.94.1", features = ["proposed"] }
ouroboros = "0.18.1"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stef-compiler = { path = "../stef-compiler" }
stef-parser = { path = "../stef-parser" }
time = { version = "0.3.30", features = ["formatting", "local-offset", "macros"] }

[lints]
workspace = true
