[package]
name = "stef-lsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories = "5.0.1"
ignore = "0.4.21"
line-index = "0.1.1"
log = { version = "0.4.20", features = ["kv_unstable_std", "std"] }
lsp-server = "0.7.5"
lsp-types = { version = "0.95.0", features = ["proposed"] }
ouroboros = "0.18.1"
parking_lot = "0.12.1"
ropey = "1.6.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stef-compiler = { path = "../stef-compiler" }
stef-meta = { path = "../stef-meta" }
stef-parser = { path = "../stef-parser" }
time = { version = "0.3.31", features = ["formatting", "local-offset", "macros"] }

[lints]
workspace = true
