[package]
name = "stef-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
include = ["src/**/*", "tests/**/*.rs"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
miette.workspace = true
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
stef-derive = { path = "../stef-derive" }
winnow = "0.5.15"

[dev-dependencies]
indoc = "2.0.3"
insta = { version = "1.31.0", features = ["glob"] }
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
debug = []
