[package]
name = "stef-parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
miette.workspace = true
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
stef-derive = { path = "../stef-derive" }
winnow = "0.5.16"

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
miette = { workspace = true, features = ["fancy-no-backtrace"] }

[features]
debug = []
