[package]
name = "stef-playground"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
stef = { path = "../stef" }

[build-dependencies]
stef-build = { path = "../stef-build" }
